# Rustchain

./: .env.miner.example  BOUNTY_1149_IMPLEMENTATION.md  BOUNTY_CONTRIBUTION.md  CONTRIBUTORS.md  DEPENDABOT.md  Dockerfile.miner  IMPLEMENTATION_SUMMARY.md  INSTALL.md  ISSUE_730_SUMMARY.md  README.md  README_DOCKER_MINER.md  README_HI.md  README_RU.md  START_HERE.md  agent_reputation.py  discord_rich_presence.py  docker-compose.miner.yml  docker-miner-entrypoint.sh  faucet.py  install.sh  payout_preflight.py  requirements-node.txt  verify_issue730.sh
.github/: dependabot.yml
.github/workflows/: bcos.yml  bounty-verifier.yml  build-windows.yml  ci.yml  ci_ledger_invariants.yml  labeler.yml  mining-status.yml  rust-ci.yml  stale.yml  tip-bot.yml  welcome.yml  windows-build.yml
benchmarks/: rtc_benchmark_gpu_20260310.json  rtc_benchmark_v2_20260310.json  rtc_cpu_benchmark.py  rtc_cpu_benchmark_v2.py
bounties/issue-474/: README.md
bounties/issue-474/docs/: IMPLEMENTATION.md  RUNBOOK.md
bounties/issue-474/evidence/: .gitignore
bounties/issue-474/examples/: Dockerfile.simulator  docker-compose.yml
bounties/issue-474/fixtures/: scenario_basic.json  scenario_seed_test.json  scenario_single_miner.json  scenario_stress.json
bounties/issue-755/: .gitignore  README.md
contracts/erc20/: package.json
cross-chain-airdrop/: .gitignore  Cargo.toml  README.md
cross-chain-airdrop/src/: bridge_client.rs  chain_adapter.rs  config.rs  error.rs  github_verifier.rs  lib.rs  models.rs  pipeline.rs
cross-chain-airdrop/tests/: integration_tests.rs
dashboards/grafana-rustchain/: README.md  rustchain-network-dashboard.json
dashboards/miner-dashboard/: README.md  index.html
dashboards/rustchain-stats/: README.md  index.html
discord-bot-nodejs-v2/: .env.example  README.md  index.js  package.json
discord-bot-nodejs-v2/commands/: balance.js  epoch.js  health.js  miners.js  tip.js
discord_bot/: .env.example  README.md  __init__.py  bot.py  config.py  requirements.txt
discord_bot/tests/: __init__.py  test_bot.py
docs/: API.md  API_WALKTHROUGH.md  BOTTUBE_FEED.md  CONTRIBUTING_FOR_AGENTS.md  CPU_IMPACT_BENCHMARK.md  FAQ_TROUBLESHOOTING.md  MULTISIG_WALLET_GUIDE.md  RATE_LIMITING_GUIDE.md  chain_architecture.md  state-of-rustchain-ergo-march-2026.md
docs/api/: EXAMPLES.md  README.md  openapi.yaml  validate_openapi.py
docs/postman/: README.md  RustChain.postman_collection.json  RustChain_API.postman_collection.json  RustChain_Environment.postman_environment.json  validate_postman_collection.py
docs/whitepaper/: tokenomics.md
docs/zh-CN/: RustChain_Whitepaper_zh-CN_v1.0.md
explorer/: ENHANCED_EXPLORER_README.md  REALTIME_DASHBOARD.md  dashboard.html  enhanced-explorer.html  realtime_server.py  requirements.txt  test_realtime.py
explorer/dashboard/: requirements.txt
extension/: README.md  manifest.json
extension/icons/: generate_icons.py
extension/tests/: extension.test.js  send-sign-flow.test.js
faucet_service/: IMPLEMENTATION_SUMMARY.md  README.md  faucet_config.yaml  faucet_service.py  requirements.txt  test_faucet_service.py
homebrew/: INSTALL.md  homebrew.mxcl.rustchain-miner.plist  rustchain-miner.rb
i18n/: README.md  de-DE.json  es-ES.json  hi-IN.json  ja-JP.json  ko-KR.json  ru-RU.json  validate_i18n.py  zh-CN.json  zh-TW.json
integrations/mcp-server/: IMPLEMENTATION.md  README.md  mcp_mock.py  mcp_server.py  pyproject.toml
integrations/mcp-server/tests/: test_mcp_server.py
integrations/postman/: rustchain-postman-collection.json
load-tests/: .env.example  .gitignore  README.md  k6-config.json  k6-load-test.js  k6-scenarios.json  locust-load-test.py  locust-requirements.txt  run-load-test.sh
mining-calculator/: README.md  index.html
node/: bottube_feed.py  bottube_feed_routes.py  bridge_api.py  rustchain_sync.py  rustchain_v2_integrated_v2.2.1_rip200.py
postman/: collection.json
react-native-wallet/: README.md  SETUP_GUIDE.md  jest.config.js  jest.setup.ts  package-lock.json  package.json
react-native-wallet/app/: send.tsx
rips/: Cargo.toml
rips/docs/: RIP-302-agent-economy.md
rips/src/: ergo_bridge.rs  governance.rs  proof_of_antiquity.rs
rtc-balance-extension/: README.md  background.js  generate_icons.py  manifest.json  popup.html  popup.js  styles.css
rustchain-miner/: .env.example  Cargo.toml  README.md
rustchain-miner/src/: attestation.rs  config.rs  error.rs  hardware.rs  lib.rs  main.rs  miner.rs  transport.rs
rustchain-poa/validator/: hardware_fingerprint.py
rustchain-telegram-bot/: .env.example  .gitignore  COMPLETION_REPORT.md  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCREENSHOTS.md  ecosystem.config.js  index.js  package-lock.json  package.json  test.js  任务完成.txt
rustchain-telegram-bot/python/: README.md  bot.py  requirements.txt
rustchain-wallet/: Cargo.toml  README.md
rustchain-wallet/src/: client.rs  keys.rs  lib.rs  nonce_store.rs  storage.rs  transaction.rs
scripts/: run-self-tests.js
sdk/: README.md
sdk/docs/: BOTTUBE_SDK.md
sdk/examples/: bottube_examples.py
sdk/python/: README.md  test_bottube.py
snap/: README.md  package.json  snap.manifest.json
snap/scripts/: build.js
snap/src/: index.js
snap/tests/: snap-integration.test.js  snap.test.js
telegram_bot/: .env.example  .gitignore  README.md  __init__.py  requirements.txt  rustchain_query_bot.py
telegram_bot/tests/: __init__.py  conftest.py  test_bot_commands.py  test_rustchain_client.py
tests/: ATTESTATION_FUZZ_README.md  fuzz_attestation_runner.py  fuzz_stats.json  test_attestation_regression.py  test_bottube_feed.py  test_bottube_feed_routes.py  test_wallet_coinbase_show.py
tests/attestation_corpus/: attack_sql_injection.json  attack_xss.json  edge_float_infinity.json  edge_nested_bomb.json  edge_unicode.json  malformed_miner_array.json  malformed_miner_empty.json  malformed_miner_null.json  malformed_miner_whitespace.json  valid_baseline.json
tools/node-health-cli/: README.md  __init__.py  node_health.py
wallet/: NETWORK_ERROR_HANDLING.md  coinbase_wallet.py
(+50 files in other folders)
