[package]
name = "cross-chain-airdrop"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["RustChain Contributors"]
description = "RIP-305 Cross-Chain Airdrop: wRTC on Solana + Base with anti-Sybil verification"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Scottcjn/Rustchain"
keywords = ["rustchain", "airdrop", "cross-chain", "solana", "base"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP/HTTPS
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Base58 (Solana addresses)
bs58 = "0.5"

# Ethereum address parsing (for Base)
# Using simple hex validation instead of full ethers for minimal deps

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "airdrop-cli"
path = "src/bin/airdrop_cli.rs"

[lib]
name = "cross_chain_airdrop"
path = "src/lib.rs"
